--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "method-override": "^3.0.0",
     "mongoose": "^6.5.2"
   }
 }
