--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
@@ -7,6 +8,8 @@
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
