--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.32.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
@@ -9,6 +11,8 @@
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
